# stream_json

./: AGENTS.md  Cargo.toml  LICENSE  README.md
macros/: Cargo.toml
macros/src/: attributes.rs  ident.rs  lib.rs
macros/src/derive/: mod.rs  shared.rs  state_machine.rs
proc-test/: Cargo.toml
proc-test/src/: attributes.rs  base64_embed.rs  basic.rs  containers.rs  drop_check.rs  enums.rs  lib.rs  serialization_edge_cases.rs
stream-json/: Cargo.toml
stream-json/src/: base64_embed.rs  error.rs  json_value_impl.rs  lib.rs  plaintext.rs  serde.rs  std_impl.rs
stream-json/src/tests/: base64_embed.rs  chunking.rs  derive.rs  json_value.rs  memory.rs  mod.rs  primitives.rs  std_impl_size.rs  tokens.rs  vec.rs
