[package]
name = "stream-json"
version.workspace = true
edition.workspace = true

[features]
default = []
base64 = ["dep:base64", "dep:futures-io"]
json_value = ["dep:serde_json"]

[dependencies]
bytes.workspace = true
futures-core.workspace = true
thiserror.workspace = true

base64 = { version = "0.22", optional = true }
futures-io = { version = "0.3", optional = true }
serde_json = { version = "1", optional = true }

stream-json-macros = { path = "../macros" }

[dev-dependencies]
tokio = { version = "1", features = ["io-util", "fs"] }
futures = { version = "0.3", features = ["io-compat", "executor"] }
